added Google login and PARTNERS section

--- a/public/FutureProject.html
+++ b/public/FutureProject.html
@@ -23,6 +23,7 @@
                 <li><a href="/users/login">Login</a></li>
                 <li><a href="contacts.html">CONTACTS</a></li>
                 <li><a href="/users/profile">PROFILE</a></li>
+				<li><a href="/users/partners">PARTNERS</a></li>
                 </ul>
             </nav>
             <footer id="footer" style="background-color: transparent;">
