--- a/public/socialNetwork.html
+++ b/public/socialNetwork.html
@@ -20,6 +20,7 @@
                 <li><a href="/users/login">Login</a></li>
                 <li><a href="contacts.html">CONTACTS</a></li>
                 <li><a href="/users/profile">PROFILE</a></li>
+                <li><a href="/users/partners">PARTNERS</a></li>
                 </ul>
             </nav>
             <div id="main" style="background-color: transparent;">
