--- a/public/FutureProject.html
+++ b/public/FutureProject.html
@@ -18,7 +18,7 @@
                 <ul class="links">
                     <li ><a href="/">About Us</a></li>
                     <li><a href="/users/map">MAP</a></li>
-                <li><a href="socialNetwork.html">SOCIAL NETWORK</a></li>
+                <li><a href="../socialNetwork">SOCIAL NETWORK</a></li>
                 <li class="active"><a href="FutureProject.html">FUTURE PROJECTS</a></li>
                 <li><a href="/users/login">Login</a></li>
                 <li><a href="contacts.html">CONTACTS</a></li>
